--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ******Ce projet est basé sur le esp32 et fait avec un workspace de platformIO IDE pour Visual Studio Code*****
 
-Le projet consiste à lire un signal CAN
+Le projet consiste à envoyer un signal CAN
 
 le code : TransmissionCAN.c
   permet d'envoyer du message CAN avec la library TWAI du esp32 avec un TJA1051
