--- a/README
+++ b/README
@@ -1,21 +1,9 @@
-******Ce projet est basé sur le esp32 et fait avec un workspace de platformIO IDE pour Visual Studio Code*****
-
+******Ce projet est basé sur le esp32-C3 sur un workspace platformIO IDE pour Visual Studio Code*****
 
 Ce repository contient deux branches: HIVER24 et AUT23
 
-
-
 AUT23: 
+Cette branche contient les dossiers pour la session d'Automne 2023.
 
-
-- Le projet consiste à envoyer un signal CAN
-
-le code : TransmissionCAN.c
-  permet d'envoyer du message CAN avec la library TWAI du esp32 avec un TJA1051
-
-//*****Cette partie est seulement présente pour confirmer le fonctionement de la transmission*****//
-
-le code : ReceptionCAN.c
-  permet de lire du CAN avec la library TWAI du esp32 avec un TJA1051
-
-  
+HIVER24: 
+Cette branche contient les dossiers pour la session d'Hiver 2024.
