--- a/README
+++ b/README
@@ -1,12 +1,10 @@
-******Ce projet est basé sur le esp32 et fait avec un workspace de platformIO IDE pour Visual Studio Code*****
+Le projet consiste à envoyer un message CAN via le CAN bus.
 
-Le projet consiste à envoyer un signal CAN
-
-le code : TransmissionCAN.c
+le code TransmissionCAN.c:
   permet d'envoyer du message CAN avec la library TWAI du esp32 avec un TJA1051
 
 //*****Cette partie est seulement présente pour confirmer le fonctionement de la transmission*****//
 
-le code : ReceptionCAN.c
+le code ReceptionCAN.c:
   permet de lire du CAN avec la library TWAI du esp32 avec un TJA1051
   
