--- a/README
+++ b/README
@@ -16,3 +16,7 @@ FRAMEWORK: ARDUINO
 Ce code qui convertit en des tensions en provenance d'un potentiometre en une valeur numérique sur 12 bits à l'aide d'un convertisseur analogique-numérique (ADC)
 grace à un MCP3428.
   
+Shémas:
+
+FRAMEWORK: KICAD 7.0
+contient le design de la shématique et du pcb sur kicad 
