--- a/README
+++ b/README
@@ -1,22 +1,25 @@
-Esp32-C3_Sender:
+CODE :
+
+-Esp32-C3_Sender:
 
 FRAMEWORK: ESP-IDF
 Ce code acquiert des tensions provenant d'un potentiomètre et les convertit en une valeur numérique sur 12 bits à l'aide d'un convertisseur analogique-numérique (ADC).
 Ensuite, il formate cette valeur dans un message CAN et l'envoie via le bus CAN pour la communication avec d'autres périphériques sur le réseau.
 
-Esp32Arduino:
+-Esp32Arduino:
 
 FRAMEWORK: ARDUINO
 Ce code acquiert des tensions provenant d'un potentiomètre et les convertit en une valeur numérique sur 12 bits à l'aide d'un convertisseur analogique-numérique (ADC).
 Ensuite, il formate cette valeur dans un message CAN et l'envoie via le bus CAN pour la communication avec d'autres périphériques sur le réseau.
 
-MCP3221:
+-MCP3221:
 
-FRAMEWORK: ARDUINO
+-FRAMEWORK: ARDUINO
 Ce code qui convertit en des tensions en provenance d'un potentiometre en une valeur numérique sur 12 bits à l'aide d'un convertisseur analogique-numérique (ADC)
 grace à un MCP3428.
   
-Shémas:
+
+PCB :
 
 FRAMEWORK: KICAD 7.0
 contient le design de la shématique et du pcb sur kicad 
