--- a/README
+++ b/README
@@ -8,4 +8,4 @@ Cette branche contient les dossiers pour la session d'Automne 2023.
 HIVER24: 
 Cette branche contient les dossiers pour la session d'Hiver 2024.
 
-https://github.com/CarlDominicA/Projet_Module_CAN/issues/3#issue-2159850775
+![alt text](https://github.com/CarlDominicA/Projet_Module_CAN/issues/3#issue-2159850775)
